variabili aggiornate per il deploy